Project build system changed from Maven to Gradle.